[tool.poetry]
name = "poetry-flask"
version = "0.1.0"
description = "Flask app built using poetry"
authors = ["ananthkamath"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "3.0.3"
requests = "2.31.0"
beautifulsoup4 = "4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
